# sftd

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  generator_main.cc  grammar.hpp  main.cc  sftd.cabal  sftd.sln  test.sh
.github/workflows/: tests.yml
docs/: intermediate_language_doc.md  lexical.md
exceptions/: CMakeLists.txt  basic_exception.h  grammar_exceptions.cc  grammar_exceptions.h  lex_exceptions.cc  lex_exceptions.h  syntax_exceptions.cc  syntax_exceptions.h
grammar/: CMakeLists.txt  action.h  ast.h  parser.cc  parser.h  table_generator.cc  table_generator.h
lex/: CMakeLists.txt  lex_parser.cc  lex_parser.h  token.h
sftd/: EmptyTest.cs
sftd/sftd/: Interpreter.cs
src/: Compiler.hs  Main.hs  interpreter.rs  lib.rs  vm.rs
src/Lexer/: Analyzer.hs  Tokens.hs
src/RW/: Reader.hs  Writer.hs
sugars/: CMakeLists.txt  either.hpp  fold.hpp  match.hpp  matcher.hpp  singleton.hpp
syntax/: CMakeLists.txt  command.h  compiler.cc  compiler.h  translator.cc  translator.h
tables/: CMakeLists.txt  constant_table.cc  constant_table.h  i18n_table.cc  i18n_table.h  symbol_table.cc  symbol_table.h
test/: DiffTest.hs
test/dd/: demo.dd  empty.dd
test/ds/: demo.ds
tests/: compile_test.cc  empty.rs  empty_test.cc  fold_test.cc  grammar_test.cc  i18n_test.cc  lex_test.cc  match_test.cc
